fix: spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,13 +25,13 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
 }
 
 .grid-gap {
